# NVFlare

examples/getting_started/flower/: dummy.flower.0-0-1.fab  fedavg_flwr_cifar10.py  pyproject.toml
examples/getting_started/flower/demo/: __init__.py  client.py  server.py
nvflare/app_opt/flower/: defs.py  flare_engine.py  grpc_client.py  grpc_server.py  poc_engine.py
nvflare/app_opt/flower/connectors/: grpc_client_connector.py  grpc_server_connector.py
nvflare/app_opt/flower/mock/: echo_servicer.py
nvflare/app_opt/flower/proto/: grpcadapter.proto  grpcadapter_pb2.py  grpcadapter_pb2.pyi  grpcadapter_pb2_grpc.py
nvflare/job_config/: fed_job.py
